package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_binary",
)
load("@basic_rust_deps//:defs.bzl", "crate")

rust_binary(
    name = "uses_sys_crate",
    srcs = ["src/main.rs"],
    edition = "2018",
    deps = [crate("bzip2")],
)

sh_test(
    name = "test",
    size = "small",
    srcs = ["test.sh"],
    args = ["$(location :uses_sys_crate)"],
    data = [":uses_sys_crate"],
)
